[tool.poetry]
name = "reinforcementlearning"
version = "0.1.0"
description = ""
authors = ["pushphilipp <76959263+pushphilipp@users.noreply.github.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "3.9.19"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

